<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <LinearLayout
            style="@style/MainLinearStyle">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_title_text"
                android:textSize="48sp"
                android:fontFamily="cursive"
                android:textAlignment="center"
                android:textStyle="bold|italic"
                android:textColor="@android:color/white"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:background="@android:color/holo_blue_dark"/>

            <TextView
                style="@style/SectionHeader"
                android:text="@string/toppings_title_text"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@android:color/holo_orange_light">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="4dp"
                    android:paddingTop="4dp"
                    android:orientation="vertical">
                    <CheckBox
                        style="@style/CheckboxStyle"
                        android:id="@+id/whip_check_view"
                        android:text="@string/whipcream_checkbox_text"
                        />
                    <CheckBox
                        style="@style/CheckboxStyle"
                        android:id="@+id/choc_check_view"
                        android:text="@string/chocolate_checkbox_text"/>
                    <CheckBox
                        style="@style/CheckboxStyle"
                        android:id="@+id/caramel_check_view"
                        android:text="@string/caramel_checkbox_text"/>
                    <CheckBox
                        style="@style/CheckboxStyle"
                        android:id="@+id/cocoa_check_view"
                        android:text="@string/cocoa_checkbox_text"/>
                    <CheckBox
                        style="@style/CheckboxStyle"
                        android:id="@+id/milk_check_view"
                        android:text="@string/milk_checkbox_text"
                        android:layout_marginBottom="4dp"/>
                </LinearLayout>
            </ScrollView>

            <TextView
                style="@style/SectionHeader"
                android:text="@string/quantity_title_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    style="@style/SmallButtonStyle"
                    android:layout_marginRight="16dp"
                    android:text="-"
                    android:onClick="decrement" />
                <TextView
                    android:id="@+id/quantity_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:textColor="@android:color/white"
                    android:text="0"
                    android:textSize="16sp" />
                <Button
                    style="@style/SmallButtonStyle"
                    android:text="+"
                    android:onClick="increment" />
            </LinearLayout>

            <EditText
                android:id="@+id/edit_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:inputType="textEmailAddress"
                android:hint="@string/send_hint_text"
                android:textColorHint="@android:color/holo_orange_dark"
                android:textColor="@android:color/black"
                android:background="@android:color/holo_orange_light"/>

            <Button
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/send_button_text"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:background="@android:color/white"
                android:onClick="submitOrder"/>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>